# PT-BPE

./: .gitignore  .gitmodules  README.md  config.json  config_debug.json  environment.yml  esm_env.yml  pyproject.toml
data/: download_cath.sh
data/struct_token_bench/: AtlasDataset_bfactor_score_fold_test.jsonl  AtlasDataset_bfactor_score_superfamily_test.jsonl  AtlasDataset_bfactor_score_train.jsonl  AtlasDataset_bfactor_score_validation.jsonl  AtlasDataset_neq_score_fold_test.jsonl  AtlasDataset_neq_score_superfamily_test.jsonl  AtlasDataset_neq_score_train.jsonl  AtlasDataset_neq_score_validation.jsonl  AtlasDataset_rmsf_score_fold_test.jsonl  AtlasDataset_rmsf_score_superfamily_test.jsonl  AtlasDataset_rmsf_score_train.jsonl  AtlasDataset_rmsf_score_validation.jsonl  BioLIP2FunctionDataset_catalytic_label_superfamily_test.jsonl  BioLIP2FunctionDataset_catalytic_label_validation.jsonl  ConformationalSwitchDataset_tm_score_apo_holo_test.jsonl  (+25 more)
foldingdiff/: algo.py  angles_and_coords.py  annotations.py  bpe.py  bpe_dataset.py  data_structures.py  datasets.py  lddt.py  metrics.py  modelling.py  nerf.py  old_potential_model.py  plotting.py  potential_model.py  tmalign.py  tokenizer.py  utils.py  vdw_clashes.py
jupyter/: bpe.ipynb  evaluate.ipynb  inference.ipynb  load_data.ipynb  play.ipynb  requisite_internal_values.ipynb  test.ipynb  vis.ipynb  visualize.ipynb
scripts/: analyze.py  analyze.sh  encode.sh  evaluate.py  evaluate.sh  fasta.py  get_embedding.py  get_fp.py  get_plddt.py  induce.sh  learn.sh  predict.sh  process.sh  scan.sh  train.py  train.sh
(+8 files in other folders)
